--- a/src/styles/globals/_settings.scss
+++ b/src/styles/globals/_settings.scss
@@ -1,3 +1,12 @@
 /*------------------------------------*\
     $VARIABLES
 \*------------------------------------*/
+
+$mainColor: #737E87;
+$secundaryColor: #eceded;
+$tertiaryColor: #d6dcdf;
+$white: #fff;
+$fontBase: 18px;
+$fontSmall: 14px;
+$fontLarge: 40px;
+$fontLight: #fafafa;
