--- a/src/styles/atoms/_box.scss
+++ b/src/styles/atoms/_box.scss
@@ -1,23 +1,28 @@
-.item {
-  width: 100%;
+.box {
   height: 120px;
   background-color: $tertiaryColor;
   color: $fontLight;
   font-size: $fontLarge;
   text-transform: uppercase;
-  padding: 0 0 14px 18px;
-  //padding: 60px 14px 14px 18px;
+  padding: 0 0 12px 12px;
   border-radius: 4px;
-  margin-bottom: 12px;
+  margin-bottom: 10px;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  font-family: 'Roboto', sans-serif;
 }
 
 @media screen and (min-width: 768px) {
-  .item {
-    width: calc(100% / 3 - 36px);
-    margin-right: 18px;
+  .box {
     height: 240px;
+    grid-column-start: span 6;
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .box {
+    grid-column-start: span 4;
   }
 }
