--- a/src/styles/organisms/_footer.scss
+++ b/src/styles/organisms/_footer.scss
@@ -9,11 +9,12 @@
   right: 0;
   left: 0;
   color: $white;
+  font-weight: 300;
 }
 
 @media screen and (min-width: 768px){
   .footer {
     position: initial;
-    padding: 5em 2em;
+    padding: 90px 36px;
   }
 }
