--- a/src/styles/organisms/_header.scss
+++ b/src/styles/organisms/_header.scss
@@ -1,18 +1,28 @@
 .header {
   background-color: $mainColor;
-  padding: 13px 12px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 
   a {
     color: $white;
   }
 }
 
+.header__inner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 13px 16px;
+}
+
 @media screen and (min-width: 768px) {
   .header {
     justify-content: space-between;
-    padding: 50px 40px;
+    padding: 37px 20px;
+  }
+
+  .header__inner {
+    max-width: 930px;
+    margin: 0 auto;
+    justify-content: space-between;
+    padding: 0;
   }
 }
