--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,7 +10,8 @@
 @import 'atoms/icons';
 @import 'atoms/buttons';
 @import 'atoms/logo';
-@import 'atoms/item';
+@import 'atoms/box';
+@import 'atoms/link';
 
 // MOLECULES
 
@@ -21,6 +22,13 @@
 @import 'organisms/header';
 @import 'organisms/footer';
 @import 'organisms/navigation';
+@import 'organisms/open-menu';
+@import 'organisms/aside';
+@import 'organisms/content';
+
+// TEMPLATE
+
+@import 'template/grid';
 
 // PAGES
 
