--- a/src/styles/atoms/_buttons.scss
+++ b/src/styles/atoms/_buttons.scss
@@ -25,7 +25,7 @@
   position: absolute;
   height: 2px;
   width: 100%;
-  background: $white;
+  background-color: $white;
   border-radius: 9px;
   opacity: 1;
   left: 0;
