--- a/src/styles/organisms/_content.scss
+++ b/src/styles/organisms/_content.scss
@@ -1,3 +1,13 @@
 .content {
   transition: transform 0.5s ease;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+@media screen and (min-width: 768px) {
+  .content {
+    min-height: 100vh;
+    height: auto;
+  }
 }
