--- a/.storybook/storybook.css
+++ b/.storybook/storybook.css
@@ -2,3 +2,12 @@ body {
   background-color: #e7e7e7;
   padding: 1rem 0;
 }
+
+.button--container .button {
+  position: relative;
+  display: block;
+}
+
+.container--navigation {
+  padding-left: 16px;
+}
